@startuml

'/*
' *  UCF COP3330 Fall 2021 Assignment 4 Solutions
' *  Copyright 2021 Jeanne Moore
' */


class Solution45 {
    -inputFilePath: String
    +main()
}

class ReadListFromFile {
    +readFromFile(String fileName): List<String>
    +convertList(List<String> list): List<String>
}

class PrintListToFile {
    -getFileName(): String
    +printToFile(List<String> list), String outFile): void
    +readAndProcessList(String inFile): void
}

class ProcessList {
    +findStrings(List<String> list): List<String>
    +replaceStrings(String replacer, String replaced, List<String> list): void
}

Solution45 --o PrintListToFile
PrintListToFile --o ReadListFromFile
PrintListToFile --o ProcessList


@enduml